Improve mobile style

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <style>
 body { max-width: 600px; padding: 2em 1em; margin: 0 auto; }
 html { background: #eee; color: #333; line-height: 1.5; }
